# c4g-events

./: .envrc.example  README.md  app_manifest.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  event.py  server.py
